Fixed image call for the black trans background as it breaks on co.uk

--- a/css/style.css
+++ b/css/style.css
@@ -8815,7 +8815,7 @@ h3
 
 .secondary-nav
 {
-	background-image: url('../images/black-trans.png');
+	background-image: url('/sites/all/themes/aesseal_classic/images/black-trans.png');
 	padding-top: 5px;
 	padding-left: 245px;}
 
